Bug 151134 - FILESAVE PPTX: indentation of second (and other) textbox(es) shifts to the left
Summary: FILESAVE PPTX: indentation of second (and other) textbox(es) shifts to the left
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.6.2 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: bibisected, bisected, filter:pptx, regression
Depends on:
Blocks: PPTX-Paragraph
  Show dependency treegraph
 
Reported: 2022-09-22 14:48 UTC by Gerald Pfeifer
Modified: 2023-08-21 08:55 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the problem (241.60 KB, image/png)
2022-09-23 01:21 UTC, Rafael Lima
Details
screenshot (323.63 KB, image/png)
2023-08-19 05:02 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2022-09-22 14:48:00 UTC Comment hidden (obsolete)
Comment 1 Gerald Pfeifer 2022-09-22 14:56:47 UTC
(( Ah, realizing that the first issue of the two reported originally
probably is a duplicate of bug #150316. Let's focus on the second then. ))

 1. Open attachment #118595 [details] from bug #94122.
 2. Save as PPTX.
 3. Open PPTX in LibreOffice or Office 365.
 4. Observe how the second and the last title are shifted to the left.

Seen with
   Version: 7.5.0.0.alpha0+ / LibreOffice Community
   Build ID: 90861cc6f815b3f34edb88d47afed0d1099e72e7
   CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US

Already in
   Version: 7.3.6.0.0+ / LibreOffice Community
   Build ID: d484e8ba447de90fd77d0244a2cda1400bbe6232
   CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US
too, so apparently not related to the regression from bug #150316.
Comment 2 Rafael Lima 2022-09-23 01:21:19 UTC
Created attachment 182637 [details]
Screenshot showing the problem

Here's a screenshot of what I see.

Left = Original ODP
Right = Exported PPTX

I'm setting this to NEW.
Comment 3 Rafael Lima 2022-09-23 01:24:17 UTC
Repro at least since

Version: 7.2.6.2 / LibreOffice Community
Build ID: b0ec3a565991f7569a5a7f5d24fed7f52653d754
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 4 Aron Budea 2022-09-25 15:00:37 UTC
This is actually a regression in 7.2, bibisected to the following commit, bibisected using repo bibisect-linux-64-7.2. Adding CC: to Attila Bakos (NISZ) and László Németh.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b6b02e0b4c9d739836e1f61a886ea45b01e6696e
author		Attila Bakos (NISZ) <bakos.attilakaroly@nisz.hu>	2021-04-20 13:02:44 +0200
committer	László Németh <nemeth@numbertext.org>	2021-04-29 10:48:27 +0200

tdf#111903 tdf#137152 PPTX export: fix placeholders
Comment 5 Commit Notification 2023-08-18 20:16:15 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0367a168cd01f4a2c16101726714f696ba023a6f

tdf#151134 Always write inset properties when exporting placeholder shapes

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2023-08-19 05:02:23 UTC
Created attachment 189035 [details]
screenshot

Thanks Samuel,
Resolved in
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 34d32740d89876c3d4fd2743a07d6e2578601683
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Bad in (for comparison reason)
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2023-08-21 08:48:52 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1d6547c588fefad68d5f69fd09323348eb24788a

tdf#151134 Always write inset properties when exporting placeholder shapes

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 László Németh 2023-08-21 08:55:31 UTC
@Gerald, Samuel et al.: many thanks for the report and fixing the issue!