tdf#151134 Always write inset properties when exporting placeholder shapes

The default value works for text boxes, but not for these special
presentation placeholder objects - here the values need to be written
explicitly.

Change-Id: Id606bd5e6b63dee2fd3b385435ce13ecec63b5f1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155838
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>